# isanlp_rst

./: .gitignore  Dockerfile  LICENSE  LICENSE_MODELS  README.md  UniRST_Metrics.md  build.sh  pipeline_object.py  pyproject.toml  setup.py  update_client_isanlp.sh
examples/: example-image-ru.rs3  example-image.rs3  example.rs3  paracetamol_wiki.rs3  usage.ipynb
isanlp_rst/: __init__.py  base_predictor.py  ensemble_predictor.py  parser.py  parsing_net_ensemble.py
isanlp_rst/dmrst_parser/: data_manager.py  du_converter.py  multiple_runs.py  predictor.py  trainer.py
isanlp_rst/rstviewer/: __init__.py  main.py  rstweb_reader.py  rstweb_sql.py
isanlp_rst/universal_parser/: data_manager.py  du_converter.py  multiple_runs.py  predictor.py  trainer.py
isanlp_rst/utils/: __init__.py  du_converter.py  serialization.py
src/: classifier_wrappers.py  rst_tree_predictor.py
src/export/: to_rs3.py
src/isanlp_rst/: allennlp_classifier.py  allennlp_classifier_contextual_bimpm.py  allennlp_classifier_custom_bimpm.py  allennlp_segmentator.py  allennlp_segmenter.py  annotation.py  annotation_from_protobuf.py  annotation_rst.proto  annotation_to_protobuf.py  cky_rst_parser.py  classifier_wrappers.py  features_extractor.py  features_processor_default.py  features_processor_segmentation.py  features_processor_tokenizer.py  features_processor_variables.py  features_processors.py  greedy_rst_parser.py  model_segmentator.py  model_segmenter.py  pipeline_default.py  print_rst_raw.py  print_tree.py  processor_rst.py  rst_tree_predictor.py  rst_tree_predictors.py  (+5 more)
workbench_api/: Dockerfile  isanlp_rst_api.py  parser_wrapper.py
(+150 files in other folders)
