[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isanlp_rst"
version = "3.2.1"
description = "IsaNLP RST Parser: A library for parsing Rhetorical Structure Theory trees."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Elena Chistova", email = "elenachistov@gmail.com" },
]
urls = { "Homepage" = "https://github.com/tchewik/isanlp_rst" }

dependencies = [
  "playwright",
  "razdel",
  "fire",
  "matplotlib",
  "lxml",
  "jsonnet",
  "nltk",
  "spacy",
  "numpy>=1.26,<3.0",
  "transformers",
  "torch",
  "huggingface_hub",
  "tqdm",
  "networkx",
  "pillow",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
"isanlp_rst.rstviewer" = ["data/**"]
